--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -65,8 +65,7 @@ textarea {
     padding: 10px;
     margin-top: 6.5em;
     justify-content: center;
-    margin-left: 1.5em;
-    margin-right: 1.5em;
+  
   }
   textarea {
     display: flex;
